add path parameter for id
